python/executable/build/bdist.macosx-10.8-x86_64/python2.7-standalone/app/collect/pysdif/sdif.h


typedef struct SdifFileS SdifFileT;
typedef enum SdifHashIndexTypeE
{
  eHashChar,
  eHashInt4
} SdifHashIndexTypeET;
typedef struct SdifHashTableS SdifHashTableT;
typedef int32_t        SdifInt4;
typedef uint32_t       SdifUInt4;
typedef int            SdifInt4;
typedef unsigned int   SdifUInt4;
typedef SdifUInt4      SdifSignature;
typedef double         SdifFloat8;
typedef enum SdifDataTypeE
{
  eText     = 0x0301,
  eChar     = 0x0301,
  eFloat4   = 0x0004,
  eFloat8   = 0x0008,
  eInt1     = 0x0101,
  eInt2     = 0x0102,
  eInt4     = 0x0104,
  eInt8     = 0x0108,
  eUInt1    = 0x0201,
  eUInt2    = 0x0202,
  eUInt4    = 0x0204,
  eUInt8    = 0x0208,
  eFloat4a  = 0x0001,       
  eFloat4b  = 0x0020,       
  eFloat8a  = 0x0002,       
  eFloat8b  = 0x0040    
} SdifDataTypeET;
typedef struct SdifMatrixHeaderS SdifMatrixHeaderT;
typedef struct SdifOneRowS SdifOneRowT;
typedef struct SdifFrameHeaderS SdifFrameHeaderT;
struct SdifFileS
{
  char               *Name;             
  SdifFileModeET     Mode;              
  int                isSeekable;        
  SdifUInt4          FormatVersion;     
  SdifUInt4          TypesVersion;      
  SdifNameValuesLT   *NameValues;       
  SdifHashTableT     *MatrixTypesTable; 
  SdifHashTableT     *FrameTypesTable;  
  SdifStreamIDTableT *StreamIDsTable;   
  SdifTimePositionLT *TimePositions;    
  SdifSelectionT     *Selection;        
  FILE *Stream;                         
  SdifSignature      CurrSignature;
  SdifFrameHeaderT   *CurrFramH;        
  SdifMatrixHeaderT  *CurrMtrxH;        
  SdifFrameTypeT     *CurrFramT;
  SdifMatrixTypeT    *CurrMtrxT;
  SdifFloat8         PrevTime;
  SdifSignatureTabT  *MtrxUsed;
  SdifOneRowT        *CurrOneRow;
  SdifMatrixDataT    *CurrMtrxData;
  size_t  FileSize;
  size_t  ChunkSize;
  SdiffPosT  CurrFramPos;
  SdiffPosT  StartChunkPos;
  SdiffPosT  Pos;
  SdifUInt2  TypeDefPass;
  SdifUInt2  StreamIDPass;
  char *TextStreamName;                 
  FILE *TextStream;                     
  SdifUInt4     ErrorCount [eNumLevels];
  SdifErrorLT  *Errors;                 
  int           NbUserData;             
  void          *UserData [MaxUserData];
};      
SDIF_API void   SdifEnableErrorOutput  (void);
SDIF_API void   SdifDisableErrorOutput (void);
extern SDIF_API int              gSdifErrorOutputEnabled;
extern SDIF_API char            *SdifErrorFile;
extern SDIF_API int              SdifErrorLine;
extern SDIF_API FILE            *SdifStdErr;
SDIF_API int    SdifFGetSignature       (SdifFileT *SdifF, size_t *NbCharRead);
SDIF_API size_t SdifFReadGeneralHeader    (SdifFileT *SdifF);
SDIF_API size_t SdifFReadAllASCIIChunks   (SdifFileT *SdifF);
SDIF_API size_t SdifFReadMatrixHeader     (SdifFileT *SdifF);
SDIF_API size_t SdifFReadOneRow           (SdifFileT *SdifF);
SDIF_API size_t SdifFSkipOneRow(SdifFileT *SdifF);
SDIF_API size_t SdifFReadFrameHeader      (SdifFileT *SdifF);
SDIF_API size_t SdifFSkipMatrix          (SdifFileT *SdifF);
SDIF_API size_t SdifFSkipMatrixData       (SdifFileT *SdifF);
SDIF_API size_t SdifFSkipFrameData        (SdifFileT *SdifF);
SDIF_API size_t SdifFReadPadding          (SdifFileT *SdifF, size_t Padding);
SDIF_API size_t SdifFSkip (SdifFileT *SdifF, size_t bytes);
SDIF_API size_t SdifFReadAndIgnore (SdifFileT *SdifF, size_t bytes);
SDIF_API size_t  SdifFWriteGeneralHeader   (SdifFileT *SdifF);
SDIF_API size_t  SdifFWriteAllASCIIChunks  (SdifFileT *SdifF);
SDIF_API size_t  SdifFWriteMatrixHeader    (SdifFileT *SdifF);
SDIF_API size_t  SdifFWriteOneRow          (SdifFileT *SdifF);
SDIF_API size_t SdifFWriteMatrixData (SdifFileT *SdifF, void *Data);
SDIF_API size_t SdifFWriteMatrix (SdifFileT     *SdifF,
                                  SdifSignature  Signature,
                                  SdifDataTypeET DataType,
                                  SdifUInt4      NbRow,
                                  SdifUInt4      NbCol,
                                  void          *Data);
SDIF_API size_t SdifFWriteTextMatrix (SdifFileT     *SdifF,
                             SdifSignature  Signature,
                             SdifUInt4      Length,
                             char          *Data);
SDIF_API size_t SdifAsciiToUTF8 (char *ascii_in, char *utf8_out);
SDIF_API size_t  SdifFWritePadding         (SdifFileT *SdifF, size_t Padding);
SDIF_API size_t  SdifFWriteFrameHeader     (SdifFileT *SdifF);
SDIF_API void    SdifUpdateChunkSize       (SdifFileT *SdifF, size_t ChunkSize);
SDIF_API int     SdifUpdateFrameHeader     (SdifFileT *SdifF, size_t ChunkSize, 
                                   SdifInt4 NumMatrix);
SDIF_API SdifFrameHeaderT* SdifFSetCurrFrameHeader (SdifFileT *SdifF, 
                                                    SdifSignature Signature, 
                                                    SdifUInt4 Size,
                                                    SdifUInt4 NbMatrix, 
                                                    SdifUInt4 NumID, 
                                                    SdifFloat8 Time);
SDIF_API SdifMatrixHeaderT* SdifFSetCurrMatrixHeader (SdifFileT *SdifF, 
                                                      SdifSignature Signature,
                                                      SdifDataTypeET DataType, 
                                                      SdifUInt4 NbRow, 
                                                      SdifUInt4 NbCol);
SDIF_API SdifOneRowT*  SdifFSetCurrOneRow       (SdifFileT *SdifF, void *Values);
SDIF_API SdifOneRowT* SdifFSetCurrOneRowCol (SdifFileT *SdifF, SdifUInt4 numCol, SdifFloat8 Value);
#define _SdifUnknownSize  0xffffffff
SDIF_API SdifUInt4 SdifSizeofDataType (SdifDataTypeET DataType);
SDIF_API size_t    SdifFPaddingCalculate (FILE *f, size_t NbBytes);
SDIF_API SdifHashTableT* SdifCreateHashTable(unsigned int HashSize, SdifHashIndexTypeET IndexType, void (*Killer)(void *));