python/executable/build/bdist.macosx-10.8-x86_64/python2.7-standalone/app/collect/pysdif/pysdif.pxd


    # 
    # 
    # /*#include "SdifFile.h"
    #  */
    # 
    # 
    # /*DOC:
    #   Switch output of error messages on stderr by _SdifFError on. 
    # */
    # void   SdifEnableErrorOutput  (void);
    # 
    # /*DOC:
    #   Switch output of error messages on stderr by _SdifFError off. 
    # */
    # void   SdifDisableErrorOutput (void);
    # 
    # 
    # /* global variables to control error output */
    # extern int              gSdifErrorOutputEnabled;
    # extern char            *SdifErrorFile;
    # extern int              SdifErrorLine;
    # extern FILE            *SdifStdErr;
    int              gSdifErrorOutputEnabled
    char            *SdifErrorFile
    int              SdifErrorLine
    FILE            *SdifStdErr
    #

    # 
    # 
    # /*DOC: 
    #   Lit 4 bytes, les considere comme une signature qui est placee dans
    #   SdifF->CurrSignature, incremente NbCharRead du nombre de bytes lus
    #   et renvoie le dernier caractere lu convert en int (-1 si erreur).  */
    # int    SdifFGetSignature       (SdifFileT *SdifF, size_t *NbCharRead);
    int SdifFGetSignature (SdifFileT *SdifF, size_t *NbCharRead)
    # 
    # 
    # /*DOC: 
    #   Lit l'entete du fichier, c'est a dire 'SDIF' puis 4 bytes.  affiche
    #   un message en cas de non reconnaissance du format.  */
    # size_t SdifFReadGeneralHeader    (SdifFileT *SdifF);
    size_t SdifFReadGeneralHeader (SdifFileT *SdifF)
    # 
    # size_t SdifFReadAllASCIIChunks   (SdifFileT *SdifF);
    size_t SdifFReadAllASCIIChunks   (SdifFileT *SdifF)
    # 
    # /*DOC: 
    #   Cette fonction lit une entete de matrice <strong>signature
    #   incluse</strong>.  Elle verifie le type de matrice, le champ
    #   DataType. Toute les donnees se trouvent stockees dans
    #   SdifF->CurrMtrxH. La plupart de ses champs sont directement
    #   accessible par les fonctions independantes du mode d'ouverture du
    #   fichier.  <strong>Elle effectue une mise  jour de l'allocation
    #   memoire de SdifF->CurrOneRow en fonction des parametres de l'entete
    #   de matrice.</strong> Ainsi, on est normalement pres pour lire chaque
    #   ligne de la matrice courrante.  
    # 
    #   @return       number of bytes read or 0 if error 
    # */
    # size_t SdifFReadMatrixHeader     (SdifFileT *SdifF);
    size_t SdifFReadMatrixHeader     (SdifFileT *SdifF)
    # 
    # /*DOC: 
    #   Cette fonction permet de lire 1 ligne de matrice. Les donnees lues
    #   sont stockees dans SdifF->CurrOneRow (jusqu'a une prochaine lecture
    #   d'entete de matrice qui reinitialise ses parametres).  */
    # size_t SdifFReadOneRow           (SdifFileT *SdifF);
    size_t SdifFReadOneRow           (SdifFileT *SdifF)
    # 
    # /*DOC:
    #   skip one matrix row, when reading row by row with SdifFReadOneRow */
    # size_t SdifFSkipOneRow(SdifFileT *SdifF);
    size_t SdifFSkipOneRow(SdifFileT *SdifF)
    # 
    # 
    # /*DOC: 
    #   Cette fonction lit l'entete d'un frame a partir de la taille et
    #   jusqu'au temps. Donc <strong>elle ne lit pas la signature</strong>
    #   mais donne a SdifF->CurrFramH->Signature la valeur de
    #   SdifF->CurrSignature.  La lecture doit se faire avant, avec
    #   SdifFGetSignature.  */
    # size_t SdifFReadFrameHeader      (SdifFileT *SdifF);
    size_t SdifFReadFrameHeader      (SdifFileT *SdifF)
    # 
    # /*DOC: 
    #   Cette fonction permet de passer une matrice toute entiere entete
    #   incluse. Elle est utile lorsque qu'un frame contient plus de
    #   matrices que le programme lecteur n'en connaît. Il peut ainsi les
    #   passer pour retomber sur un autre frame.  */
    # size_t SdifFSkipMatrix          (SdifFileT *SdifF);
    size_t SdifFSkipMatrix          (SdifFileT *SdifF)
    # 
    # /*DOC: 
    #   Cette fonction permet de passer une matrice mais apres la lecture de
    #   l'entete. On s'en sert lorsque le type de matrice est mauvais,
    #   inconnu, non interpretable par le programme lecteur.
    # 
    #   Note:  The matrix padding is skipped also. */
    # size_t SdifFSkipMatrixData       (SdifFileT *SdifF);
    size_t SdifFSkipMatrixData       (SdifFileT *SdifF)
    # 
    # /*DOC: 
    #   Cette fonction a le meme sens que SdifSkipMatrixData mais pour les
    #   frames. Il faut donc pour l'utiliser avoir au prealable lu la
    #   signature et l'entete.  */
    # size_t SdifFSkipFrameData        (SdifFileT *SdifF);
    size_t SdifFSkipFrameData        (SdifFileT *SdifF)
    # 
    # /*DOC: 
    #   Cette fonction permet de lire le Padding en fin de matrice.
    #   l'utilisation classique de cette fonctin est:<br> 
    #   <code> SizeR =  SdifFReadPadding(SdifF, SdifFPaddingCalculate(SdifF->Stream, SizeR));</code><br> 
    #   ou SizeR est la taille en bytes lue depuis le
    #   debut de la matrice, c'est a dire NbRow*NbCol*DataWith. En realite,
    #   pour que SdifFPaddingCalculate fonctionne, il est seulement
    #   necessaire que SizeR soit le nombre de bytes qui s'epare la position
    #   actuelle dans le fichier et un byte, repere d'allignement sur 64
    #   bits.  */
    # size_t SdifFReadPadding          (SdifFileT *SdifF, size_t Padding);
    size_t SdifFReadPadding          (SdifFileT *SdifF, size_t Padding)
    # 
    # 
    # /* skip given number of bytes, either by seeking or by reading bytes */
    # size_t SdifFSkip (SdifFileT *SdifF, size_t bytes);
    size_t SdifFSkip (SdifFileT *SdifF, size_t bytes)
    # 
    # 
    # /*DOC:
    #   Read and throw away <i>num</i> bytes from the file. */
    # size_t SdifFReadAndIgnore (SdifFileT *SdifF, size_t bytes);
    size_t SdifFReadAndIgnore (SdifFileT *SdifF, size_t bytes)
    # 
    # 
    # /*DOC: 
    #   ecrit sur le fichier 'SDIF' puis 4 bytes chunk size.  */
    # size_t  SdifFWriteGeneralHeader   (SdifFileT *SdifF);
    size_t  SdifFWriteGeneralHeader   (SdifFileT *SdifF)
    # 
    # /*DOC: 
    #   ecrit tous les chunks ASCII. C'est a dire: les tables de names
    #   values, les types crees ou completes, et les Stream ID. Il faut donc
    #   au prealable avoir rempli completement les tables avant de la
    #   lancer. Cette fonction de peut donc pas etre executer une 2nd fois
    #   durant une ecriture.  */
    # size_t  SdifFWriteAllASCIIChunks  (SdifFileT *SdifF);
    size_t  SdifFWriteAllASCIIChunks  (SdifFileT *SdifF)
    # 
    # 
    # /*
    # //FUNCTION GROUP:       Writing Matrices
    # */
    # 
    # /*DOC: 
    #   Apres avoir donner une valeur a chaque champ de SdifF->CurrMtrxH
    #   grace a la fonction SdifFSetCurrMatrixHeader, SdifFWriteMatrixHeader
    #   ecrit toute l'entete de la matrice.  Cette fonction realise aussi
    #   une mise a jour de SdifF->CurrOneRow, tant au niveau de l'allocation
    #   memoire que du type de donnees.  */
    # size_t  SdifFWriteMatrixHeader    (SdifFileT *SdifF);
    size_t  SdifFWriteMatrixHeader    (SdifFileT *SdifF)
    # 
    # /*DOC: 
    #   Apres avoir donner les valeurs a chaque case de SdifF->CurrOneRow a
    #   l'aide de SdifFSetCurrOneRow ou de SdifFSetCurrOneRowCol (suivant
    #   que l'on possede deja un tableau flottant ou respectivement une
    #   methode pour retrouver une valeur de colonne), SdifFWriteOneRow
    #   ecrit 1 ligne de matrice suivant les parametres de SdifF->CurrMtrxH.  */
    # size_t  SdifFWriteOneRow          (SdifFileT *SdifF);
    size_t  SdifFWriteOneRow          (SdifFileT *SdifF)
    # 
    # /*DOC: 
    #   Write whole matrix data, (after having set the matrix header with 
    #   SdifFSetCurrMatrixHeader (file, matrixsig, datatype, nrow, ncol).
    #   Data points to nbrow * nbcol * SdifSizeofDataType (datatype) bytes in 
    #   row-major order.  Padding still has to be written.  */
    # size_t SdifFWriteMatrixData (SdifFileT *SdifF, void *Data);
    size_t SdifFWriteMatrixData (SdifFileT *SdifF, void *Data)
    # 
    # /*DOC:
    #   Write whole matrix: header, data, and padding.
    #   Data points to NbRow * NbCol * SdifSizeofDataType (DataType) bytes in
    #   row-major order. */
    size_t SdifFWriteMatrix (SdifFileT     *SdifF,
                                   SdifSignature  Signature,
                                   SdifDataTypeET DataType,
                                   SdifUInt4      NbRow,
                                   SdifUInt4      NbCol,
                                   void          *Data)
 
    # /*DOC:
    #   Write a matrix with datatype text (header, data, and padding).
    #   Data points to Length bytes(!) of UTF-8 encoded text.  Length
    #   includes the terminating '\0' character!!!  That is, to write a
    #   C-String, use SdifFWriteTextMatrix (f, sig, strlen (str) + 1, str);
    #   to include it. */
    # size_t SdifFWriteTextMatrix (SdifFileT     *SdifF,
    #                              SdifSignature  Signature,
    #                              SdifUInt4      Length,
    #                              char          *Data);
    size_t SdifFWriteTextMatrix (SdifFileT *SdifF,
                                          SdifSignature Signature,
                                          SdifUInt4 Length,
                                          char *Data)

    # 
    # /*DOC: 
    #   TBI: Convert ASCII C-String to UTF-8 encoded string, returning
    #   length (including terminating null character). */
    # size_t SdifAsciiToUTF8 (char *ascii_in, char *utf8_out);
    # 
    # /*DOC: 
    #   Cette fonction permet en fin d'ecriture de matrice d'ajouter le
    #   Padding necessaire. Il faut cependant avoir la taille de ce
    #   Padding. On utilise SdifFPaddingCalculate(SdifF->Stream,
    #   SizeSinceAlignement) ou SizeSinceAllignement est un
    #   <code>size_t</code> designant le nombre de bytes qui separe la
    #   position actuelle d'ecriture avec une position connue ou le fichier
    #   est aligne sur 64 bits (en general, c'est la taille de la matrice en
    #   cours d'ecriture: NbRow*NbCol*DatWitdh).  */
    # size_t  SdifFWritePadding         (SdifFileT *SdifF, size_t Padding);
    size_t  SdifFWritePadding         (SdifFileT *SdifF, size_t Padding)
    # 
    # 
    # /*
    # //FUNCTION GROUP:       Writing Frames
    # */
    # 
    # /*DOC: 
    #   Apres avoir donner une valueur a chaque champ de SdifF->CurrFramH
    #   grace a la fonction SdifFSetCurrFrameHeader, SdifFWriteFrameHeader
    #   ecrit toute l'entete de frame.  Lorsque la taille est inconnue au
    #   moment de l'ecriture, donner la valeur _SdifUnknownSize. Ensuite,
    #   compter le nombre de bytes ecrit dans le frame et realiser un
    #   SdifUpdateChunkSize avec la taille calculee.  */
    # size_t  SdifFWriteFrameHeader     (SdifFileT *SdifF);
    size_t  SdifFWriteFrameHeader     (SdifFileT *SdifF)
    # 
    # /*DOC: 
    #   Execute un retour fichier de ChunkSize bytes et l'ecrit, donc on
    #   ecrase la taille du chunk ou du frame.  Dans le cas ou le fichier
    #   est stderr ou stdout, l'action n'est pas realisee.  */
    # void    SdifUpdateChunkSize       (SdifFileT *SdifF, size_t ChunkSize);
    void    SdifUpdateChunkSize       (SdifFileT *SdifF, size_t ChunkSize)
    # 
    # /*DOC: 
    #   Rewrite given frame size and number of matrices in frame header.
    #   Return -1 on error or if file is not seekable (stdout or stderr). */
    # int     SdifUpdateFrameHeader     (SdifFileT *SdifF, size_t ChunkSize, 
    #                                    SdifInt4 NumMatrix);
